invariant in IndexCatalogImpl::createIndexOnEmptyCollection() fails due to inaccurate fast count

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.0-rc8, 4.7.0
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • v4.4
    • Execution Team 2020-06-15
    • 15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The invariant in IndexCatalogImpl::createIndexOnEmptyCollection() relies on the fast count for the collection being accurate. This is not always the case, especially in rollback scenarios. A more reliable way to determine if the collection is empty is to check the record store using Collection::isEmpty().

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: