SERVER-48253 fix IndexCatalogImpl::createIndexOnEmptyCollection() invariant to check record store